updated code to reduce multiple calls