@@ -15,6 +15,7 @@ import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class ConsumedFoodServiceImpl extends AbstractEntityServiceImpl<ConsumedFood> implements ConsumedFoodService {
@@ -45,65 +46,41 @@ public class ConsumedFoodServiceImpl extends AbstractEntityServiceImpl<ConsumedF
 
     @Override
     public Collection<ConsumedFood> findAllFromDate() {
+        User currentUser = (User) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
         List<ConsumedFood> consumedFoodsByDate =
                 ((ConsumedFoodRepository) repository).findAllByTimeOfConsumption(LocalDateTime.now());
-        List<RegisteredFood> registeredFoods = registeredFoodService
-                .findAllByUser((User) SecurityContextHolder.getContext().getAuthentication().getPrincipal());
 
-        return consumedFoodsByDate.stream().filter(consumedFood -> registeredFoods.stream().filter(registeredFood ->
-                consumedFood.getRegisteredFood().getId().equals(registeredFood.getId())).toList().size() > 0).toList();
+        return consumedFoodsByDate.stream()
+                .filter(consumedFood -> consumedFood.getRegisteredFood().getUser().getId()
+                        .equals(currentUser.getId())).collect(Collectors.toList());
     }
 
     @Override
     public Collection<ConsumedFoodByDateDTO> findAllFromUser() {
-        List<ConsumedFood> consumedFoodsByDate = repository.findAll();
-        List<RegisteredFood> registeredFoods = registeredFoodService
-                .findAllByUser((User) SecurityContextHolder.getContext().getAuthentication().getPrincipal());
+        User currentUser = (User) SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+        List<ConsumedFood> consumedFood = repository.findAll();
+        consumedFood = consumedFood.stream()
+                .filter(consumedFood1 -> consumedFood1.getRegisteredFood().getUser().getId().equals(currentUser.getId()))
+                .collect(Collectors.toList());
 
-        //list of every consumed food from one person
-        consumedFoodsByDate = consumedFoodsByDate.stream().filter(consumedFood -> registeredFoods.stream().filter(registeredFood ->
-                consumedFood.getRegisteredFood().getId().equals(registeredFood.getId())).toList().size() > 0).toList();
-
-        //split the list by date
         SimpleDateFormat fmt = new SimpleDateFormat("yyyy-MM-dd");
-        List<List<ConsumedFood>> consumedFoodSplitByDate = new ArrayList<>();
-        for (ConsumedFood consumedFoodEntry : consumedFoodsByDate) {
-            boolean newDate = true;
-            for (List<ConsumedFood> foodList : consumedFoodSplitByDate) {
-                if (fmt.format(foodList.get(0).getTimeOfConsumption()).equals(fmt.format(consumedFoodEntry.getTimeOfConsumption()))) {
-                    foodList.add(consumedFoodEntry);
-                    newDate = false;
-                    break;
-                }
-            }
-            if (newDate) {
-                List<ConsumedFood> newList = new ArrayList<>();
-                newList.add(consumedFoodEntry);
-                consumedFoodSplitByDate.add(newList);
-            }
-        }
-
         List<ConsumedFoodByDateDTO> history = new ArrayList<>();
-        for (List<ConsumedFood> foodList : consumedFoodSplitByDate) {
-            //set default data
-            ConsumedFoodByDateDTO list = new ConsumedFoodByDateDTO();
-            list.getNutrition().setCalories(0);
-            list.getNutrition().setProtein(0);
-            list.getNutrition().setFat(0);
-            list.getNutrition().setCarbs(0);
-            list.setLocalDateTime(foodList.get(0).getTimeOfConsumption());
-            //combine all values into one object
-            for (ConsumedFood element:foodList) {
-                list.getNutrition().setCalories(list.getNutrition().getCalories() +
-                        element.getRegisteredFood().getFood().getNutrition().getCalories());
-                list.getNutrition().setFat(list.getNutrition().getFat() +
-                        element.getRegisteredFood().getFood().getNutrition().getFat());
-                list.getNutrition().setCarbs(list.getNutrition().getCarbs() +
-                        element.getRegisteredFood().getFood().getNutrition().getCarbs());
-                list.getNutrition().setProtein(list.getNutrition().getProtein() +
-                        element.getRegisteredFood().getFood().getNutrition().getProtein());
+        for (ConsumedFood food : consumedFood) {
+            ConsumedFoodByDateDTO listElement = history.stream().filter(consumedFoodByDateDTO -> fmt.format(consumedFoodByDateDTO.getLocalDateTime()).equals(fmt.format(food.getTimeOfConsumption()))).findFirst().orElse(null);
+            if (listElement == null) {
+                listElement = new ConsumedFoodByDateDTO();
+                listElement.setNutrition(food.getRegisteredFood().getFood().getNutrition());
+                history.add(listElement);
+            } else {
+                listElement.getNutrition().setProtein(listElement.getNutrition().getProtein() +
+                        food.getRegisteredFood().getFood().getNutrition().getProtein());
+                listElement.getNutrition().setFat(listElement.getNutrition().getFat() +
+                        food.getRegisteredFood().getFood().getNutrition().getFat());
+                listElement.getNutrition().setCarbs(listElement.getNutrition().getCarbs() +
+                        food.getRegisteredFood().getFood().getNutrition().getCarbs());
+                listElement.getNutrition().setCalories(listElement.getNutrition().getCalories() +
+                        food.getRegisteredFood().getFood().getNutrition().getCalories());
             }
-            history.add(list);
         }
 
         return history;
